fix: Make _triangleShape() auto center-align the triangle

--- a/utils/styl/utils.styl
+++ b/utils/styl/utils.styl
@@ -216,7 +216,6 @@ _triangle($dir=top, $color=#fff, $h=10px, $w=(2*$h), $pos=50%, $posFrom=null, $s
     position: absolute;
     {$dir}: -($h);
     {$posFrom}: $pos;
-    margin: -($w/2);
     margin-{$dir}: -($shift);
 }
 
@@ -231,6 +230,12 @@ _triangleShape($dir=top, $color=#fff, $h=10px, $w=(2*$h)) {
     border-width: isVertical($dir) ? $h ($w/2) : ($w/2) $h;
     border-{opposite-position($dir)}-color: $color;
     border-{$dir}-width: 0;
+    if ($dir==top or $dir==bottom) {
+        margin: 0 -($w/2);
+    }
+    else {
+        margin: -($w/2) 0;
+    }
 }
 
 
